# sentinela-py

./: .env  .gitignore  README.md  VISAO_CONCEITUAL.md  docker-compose.yml  pyproject.toml  tsconfig.base.json
docs/: cidade_catalogo.md  cli.md  estrutura.md  extraction.md  geo_enrichment_cli.md  publications.md  rollout_cities_extraction.md
sentinela/:  portais.json  __init__.py  api.py  cli.py  container.py  settings.py
sentinela.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sentinela/application/: __init__.py  services.py  servico_coleta_noticias.py  servico_registro_portal.py
sentinela/data/: __init__.py  municipios_br_v1.json
sentinela/domain/: __init__.py  entities.py  ports.py  repositories.py
sentinela/domain/entities/: __init__.py  article.py  portal.py  portal_selectors.py  selector.py
sentinela/domain/ports/: __init__.py  article_sink.py  portal_gateway.py
sentinela/domain/repositories/: __init__.py  article_read_repository.py  article_repository.py  portal_repository.py
sentinela/extraction/: __init__.py  disambiguation.py  gazetteer.py  models.py  ner.py  normalization.py  service.py
sentinela/infrastructure/: __init__.py  database.py  extraction.py  repositories.py  scraper.py
sentinela/infrastructure/repositories/: __init__.py  article_indexes.py  mongo_article_read_repository.py  mongo_article_repository.py  mongo_portal_repository.py
sentinela/services/: __init__.py
sentinela/services/extraction/: __init__.py  adapters.py  app.py
sentinela/services/extraction/adapters/: __init__.py  _stored_result.py  enriched_article_result.py  (+5 more)
sentinela/services/news/: __init__.py  api.py  clients.py  container.py
sentinela/services/portals/: __init__.py  api.py  container.py
sentinela/services/publications/: __init__.py  adapters.py  api.py  container.py  geo_cli.py
tests/: test_article_indexes.py  test_city_extraction_payload.py  test_city_matcher.py  test_cli_report_articles.py  test_entity_extraction_service.py  test_extraction_disambiguation.py  test_extraction_gazetteer.py  test_extraction_normalization.py  test_extraction_service_app.py  test_geo_enrichment_cli.py  test_geo_enrichment_service.py  test_infrastructure_extraction.py  test_portal_listing_url.py  test_publications_schemas.py  test_scraper_datetime.py  test_scraper_listing_fallback.py  test_scraper_selector_normalization.py
tests/services/news/: test_publications_api_sink.py
(+44 files in other folders)
