[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinela"
version = "0.1.0"
description = "Coletor modular de notícias em portais com MongoDB"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Sentinela"}]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pymongo>=4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
sentinela = "sentinela.cli:main"
